syntax = "proto3";

package types;

option java_multiple_files = true;
option java_outer_classname = "Types";
option java_package = "com.shared.types";
option go_package = "./types";

enum State {
  Invalid_State = 0;
  Up = 1;
  Down = 2;
  Unreachable = 3;
}

message HealthPoint {
  string a_uuid = 1;
  string z_uuid = 2;
  string alias = 3;
  map<string, bool> services = 4;
  State status = 5;
}